# sql-parse

./: .gitmodules  .ignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
queries/: execute.scm  raw_string.scm  sql_string.scm
src/: cli.rs  lib.rs  main.rs  oldshit.rs  program.rs  treesitter.rs  utils.rs
src/program/: mod.rs  quotes.rs  rg.rs  treesitter.rs
src/program/rg/: finder.rs  mod.rs  utils.rs
src/treesitter/: custom.rs  exec.rs  mod.rs  no_ts.rs  utils.rs
src/treesitter/snapshots/: sql_parse__treesitter__custom__test__basic_fstring_1.snap  sql_parse__treesitter__custom__test__basic_fstring_2.snap  sql_parse__treesitter__custom__test__basic_fstrings_1.snap  sql_parse__treesitter__custom__test__basic_match.snap  sql_parse__treesitter__custom__test__basic_strings.snap  sql_parse__treesitter__custom__test__basic_strings_2.snap  sql_parse__treesitter__custom__test__multiline_f_string.snap
test/: a.py  b.py  simple-dos.py  simple.py
