[package]
name = "sql-parser"
version = "0.1.0"
edition = "2021"
authors = ["James Trew"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "*"
clap = { version = "4.3.11", features = ["derive"] }
regex = "1.9.0"
tree-sitter = "0.20.10"
tree-sitter-python = { path = "tree-sitter-python" }

[build-dependencies]
cc = "*"
